Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123920

qtdeclarative build break when texthtmlparser - feature is turned off

    XMLWordPrintable

Details

    • cd5d2ec70 (dev)

    Description

      Build error when texthtmlparser - feature is turned off:

       

      /home/jari/Qt/qt_git/qtdeclarative/src/quickvectorimage/generator/qsvgvisitorimpl.cpp: In member function ‘virtual void QSvgVisitorImpl::visitTextNode(const QSvgText*)’:
      /home/jari/Qt/qt_git/qtdeclarative/src/quickvectorimage/generator/qsvgvisitorimpl.cpp:447:18: error: ‘class QTextDocument’ has no member named ‘setHtml’
        447 |         document.setHtml(text);
            |                  ^~~~~~~

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            jarihelaakoski Jari Helaakoski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes