Fix compilation with -no-feature-texthtmlparser

There's no way we're going to be able to support all features
in this case, so we just fall back to the default Text
implementation.

Drive-by: Remove a couple of unused variables.

Fixes: QTBUG-123920
Change-Id: I9f69d943a92fdd3bbc3156fe8fc451399acbad78
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>